# honey-dash

./: Cargo.toml
src/: main.rs
src/controllers/: mod.rs  sessions.rs  views.rs
src/handlers/: mod.rs  sessions.rs
templates/: index.html  ip_details.html  layout.html
templates/partials/: auth_by_minute.html
